testsuite/tests/polykinds/T15787.stderr

T15787.hs:15:14: error:
    • Expected a type, but ‘k’ has kind ‘ob’
      ‘ob’ is a rigid type variable bound by
        the data constructor ‘Kl’
        at T15787.hs:15:3-43
    • In the type ‘k’
      In the definition of data constructor ‘Kl’
      In the data declaration for ‘Kl_kind’
